{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 21,
  "lineage": "152995b0-19c3-eb75-6a7b-9fe891fed601",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "three-tier-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b70bb5c376d5a0c7",
            "domain": "vpc",
            "id": "eipalloc-0b70bb5c376d5a0c7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-141-208.compute-1.amazonaws.com",
            "public_ip": "23.20.141.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "three-tier-nat-eip"
            },
            "tags_all": {
              "Name": "three-tier-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:internet-gateway/igw-070ee06b4d12d4b07",
            "id": "igw-070ee06b4d12d4b07",
            "owner_id": "975049983623",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three-tier-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b70bb5c376d5a0c7",
            "association_id": "eipassoc-06013911390109629",
            "connectivity_type": "public",
            "id": "nat-0ce0de13f03938e0f",
            "network_interface_id": "eni-0d4fdf8707092fb9b",
            "private_ip": "10.0.3.33",
            "public_ip": "23.20.141.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9b39a080627378c",
            "tags": {
              "Name": "three-tier-natgw"
            },
            "tags_all": {
              "Name": "three-tier-natgw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:route-table/rtb-0898f261e80d5a60a",
            "id": "rtb-0898f261e80d5a60a",
            "owner_id": "975049983623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce0de13f03938e0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_nat_gateway.three-tier-natgw",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:route-table/rtb-0e36773810073b669",
            "id": "rtb-0e36773810073b669",
            "owner_id": "975049983623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070ee06b4d12d4b07",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025a81d96568aff2c",
            "route_table_id": "rtb-0898f261e80d5a60a",
            "subnet_id": "subnet-05eb64961c8a530ef"
          },
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_nat_gateway.three-tier-natgw",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_subnet.three-tier-pvt-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5ec21510670c31c",
            "route_table_id": "rtb-0898f261e80d5a60a",
            "subnet_id": "subnet-0fe6f6743a4e0b799"
          },
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_nat_gateway.three-tier-natgw",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_subnet.three-tier-pvt-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e11d51ccc1d21930",
            "route_table_id": "rtb-0898f261e80d5a60a",
            "subnet_id": "subnet-0e031c295038b09dd"
          },
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_nat_gateway.three-tier-natgw",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_subnet.three-tier-pvt-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a74fa142abb42bf6",
            "route_table_id": "rtb-0898f261e80d5a60a",
            "subnet_id": "subnet-0a717e520d7345bbf"
          },
          "dependencies": [
            "module.network.aws_eip.three-tier-nat-eip",
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_nat_gateway.three-tier-natgw",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_subnet.three-tier-pvt-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d090b73d44c135a5",
            "route_table_id": "rtb-0e36773810073b669",
            "subnet_id": "subnet-0d9b39a080627378c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037650ccca61572e2",
            "route_table_id": "rtb-0e36773810073b669",
            "subnet_id": "subnet-05f28aa659ac021c4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.three-tier-igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:security-group/sg-0a4a4edf60ae77b2b",
            "description": "Allow traffic from public subnets on port 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4a4edf60ae77b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "Allow PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/22"
                ],
                "description": "Allow PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "975049983623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.three-tier-pub-sub",
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:security-group/sg-012e516c5fce180f3",
            "description": "Allow HTTP and SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012e516c5fce180f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "975049983623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-0d9b39a080627378c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9b39a080627378c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-05f28aa659ac021c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f28aa659ac021c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-05eb64961c8a530ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb64961c8a530ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-0fe6f6743a4e0b799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe6f6743a4e0b799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-0e031c295038b09dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e031c295038b09dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:subnet/subnet-0a717e520d7345bbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a717e520d7345bbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049983623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-09a5761b482741dd1"
          },
          "dependencies": [
            "module.network.aws_vpc.three-tier-vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049983623:vpc/vpc-09a5761b482741dd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0981637b165209594",
            "default_route_table_id": "rtb-0c749c643bb0d1584",
            "default_security_group_id": "sg-04f5499241cc946d8",
            "dhcp_options_id": "dopt-093a1a729c28420ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a5761b482741dd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c749c643bb0d1584",
            "owner_id": "975049983623",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}